2008-04-25 Gabor Kelemen  <kelemeng@gnome.org>

	* hu.po: Translation updated.

2008-04-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-04-15  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-04-09  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Fixed up

2008-04-07  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-04-07  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-04-06  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Fixed up

2008-04-01  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-03-31  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-03-27  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-03-27  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-03-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-03-26  Jordi Mas <jmas@softcatala.org>

	* ca.po: Updated Catalan translation

2008-03-25  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-03-25  Jordi Mas <jmas@softcatala.org>

	* POTFILES.in: Remove BetaReleaseViewOverlay.cs from the list

2008-03-22  Wadim Dziedzic  <wadimd@svn.gnome.org>

	* pl.po: Updated polish translation

2008-03-21  Gabriel Burt  <gabriel.burt@gmail.com>

	* es.po: Remove duplicate messages that broke build.

	* POTFILES.in: Remove old QueryBuilder* files.

2008-03-21  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Andres Herrera

2008-03-17  Jordi Mas <jmas@softcatala.org>

	* ca.po: Updated Catalan translation

2008-03-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>
