@@ -1,3 +1,7 @@
+2008-04-25  Jordi Mas <jmas@softcatala.org>
+
+	* POTFILES.in: Update missing files
+
 2008-04-25 Gabor Kelemen  <kelemeng@gnome.org>
 
 	* hu.po: Translation updated.
